--- a/src/main/resources/templates/intelligence-template.html
+++ b/src/main/resources/templates/intelligence-template.html
@@ -2,27 +2,96 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Intelligence Test</title>
     <link rel=”stylesheet”
           href=”https://stackpath.bootstrapcdn.com/bootstrap/5.0.0-alpha1/css/bootstrap.min.css”rel=”nofollow”
           integrity=”sha384-r4NyP46KrjDleawBgD5tp8Y7UzmLA05oM1iAEQ17CSuDqnUK2+k9luXQOfXJCJ4I” crossorigin=”anonymous”>
-    <link rel="stylesheet" href="stylesheet.css">
+    <link rel="stylesheet" href="resources/css/stylesheet.css">
 </head>
-<body>
+<body class="styled">
 <section class="header">
-    <div class="wrapper">
-        <div class="left">
-            <p>
-                hallo
-            </p>
-        </div>
-        <div class="right">
-            <p>
-                hallo2
+    <div class="container">
+        <div>
+            <p class="text">
+                Intelligence Test
             </p>
         </div>
     </div>
 </section>
+
+<div class="separator"></div>
+
+<div class="container">
+    <div>
+        <button class="button" role="button" onclick="window.location.href='test'">Take the test</button>
+    </div>
+</div>
+
+<div class="container">
+    <div>
+        <p class="normalText">
+            Die Intelligenz Typen nach Harvard Professor Howard Gardner
+        </p>
+    </div>
+</div>
+
+<div class="separator"></div>
+
+<div class="container">
+    <div class="item">
+        <h3 class="title">KINAESTHETIC</h3>
+        <p class="normalText">Bei der kinästhetischen Intelligenz geht es darum, den eigenen Körper zu spüren und sich wirklich auf ihn einzustellen. Und das nicht nur im sportlichen Sinne - auch Menschen, die handwerklich begabt sind, gehören zu diesem Typ.
+
+            Der erste Schritt auf dem Weg zu einer hohen kinästhetischen Intelligenz besteht darin, eine harmonische Verbindung mit Ihrem Körper herzustellen. Das bedeutet, sich auf seine Bedürfnisse, Sinne und Feinheiten einzustellen.</p>
+    </div>
+    <div class="item">
+        <h3 class="title">LINGUISTIC</h3>
+        <p class="normalText">Man fragt sie: "Wie heißt das Wort noch mal?", und sie haben immer eine Antwort. Meistens in verschiedenen Sprachen und mit einem zusätzlichen Wortspiel obendrauf. Menschen mit sprachlicher Intelligenz kennen ihre Worte und haben keine Angst, sie zu benutzen.
+
+            Wollen Sie Ihre sprachlichen Fähigkeiten verbessern? Dann ist es wichtig, regelmäßig zu lesen und zu schreiben.</p>
+    </div>
+    <div class="item">
+        <h3 class="title">NATURALISTIC</h3>
+        <p class="normalText">Naturalistische Intelligenz, wie ist das? Unglaublich sinnlich, ganz sicher! Solche Menschen sind eins mit der Natur und können leicht verschiedene Tiere oder Pflanzen unterscheiden.
+
+            Der Weg zur Kultivierung dieses Intelligenztyps ist vielleicht der therapeutischste. Mehr Zeit im Freien zu verbringen, im Garten zu arbeiten und vor allem "How Not to Kill Your Houseplant" von Veronica Peerless zu lesen.</p>
+    </div>
+    <div class="item">
+        <h3 class="title">MUSICAL</h3>
+        <p class="normalText">Diese Menschen sind leicht zu erkennen: Sie summen immer eine Melodie oder klopfen zu einem bestimmten Rhythmus. Bei der musikalischen Intelligenz geht es jedoch nicht nur darum, Musik zu machen. Es kann auch um eine hohe Wertschätzung von Melodien gehen und darum, sie zu genießen, wie andere es nicht tun.
+
+            Um in die Welt der Akkorde und Tonhöhen einzutauchen, ist Music Theory von Nicolar Carter der Schlüssel.</p>
+    </div>
+</div>
+
+<div class="separator"></div>
+
+<div class="container">
+    <div class="item">
+        <h3 class="title">VISUAL</h3>
+        <p class="normalText">Für "bildgewandte" Menschen ist es ein Leichtes, sich alles vorzustellen, woran sie denken. Eine lebhafte Vorstellungskraft ist ihr Hauptvorteil, der sie kreativ und künstlerisch macht.
+
+            Ganz gleich, welchen Beruf Sie ausüben, Kreativität ist immer ein großer Vorteil. Wenn Sie also Ihre visuelle Intelligenz steigern wollen, sollten Sie sich an The Art of Creative Thinking von John Adair wenden. </p>
+    </div>
+    <div class="item">
+        <h3 class="title">INTRAPERSONAL</h3>
+        <p class="normalText">Der Typus der intrapersonellen Intelligenz zeichnet sich durch ein tiefes Verständnis für die eigene innere Welt aus. Solche Menschen wissen, was sie fühlen, wollen und brauchen, was eine Grundlage für das Erreichen ihrer Ziele und das Verfolgen ihrer Leidenschaften ist. Außerdem macht diese tiefgreifende Selbstbeobachtung sie zum Empathie-Profi.</p>
+    </div>
+    <div class="item">
+        <h3 class="title">INTERPERSONAL</h3>
+        <p class="normalText">Diese Menschen kennen sich in jedem Gespräch aus. Ihr Charme und ihre Fähigkeit, die subtilsten sozialen Signale aufzugreifen, machen sie zu geschickten Verhandlungsführern und verschaffen ihnen einen ausgezeichneten Ruf in allen Kreisen.
+
+            Die beiden wichtigsten Wörter zur Steigerung der zwischenmenschlichen Intelligenz sind also: Kontakte knüpfen und Empathie entwickeln.</p>
+    </div>
+    <div class="item">
+        <h3 class="title">LOGICAL</h3>
+        <p class="normalText">Für diese Menschen ist die Mathematik jeglicher Komplexität selbstverständlich. Und kaltblütige Deduktion ist ihre bevorzugte Denkmethode.
+
+            Wie kann man diese Superkraft entwickeln? Abgesehen davon, dass Sie von Zeit zu Zeit Knobelaufgaben lösen, sollten Sie das Buch A Mind for Numbers von Barbara Oakley lesen.</p>
+    </div>
+</div>
+
+<div class="separator"></div>
 
 </body>
 </html>
