--- a/src/main/resources/templates/test.html
+++ b/src/main/resources/templates/test.html
@@ -9,6 +9,7 @@
           href=”https://stackpath.bootstrapcdn.com/bootstrap/5.0.0-alpha1/css/bootstrap.min.css”rel=”nofollow”
           integrity=”sha384-r4NyP46KrjDleawBgD5tp8Y7UzmLA05oM1iAEQ17CSuDqnUK2+k9luXQOfXJCJ4I” crossorigin=”anonymous”>
     <link rel="stylesheet" href="resources/css/stylesheet.css">
+    <link rel="script" href="resources/javascript/chartData.js">
 </head>
 <body class="styled">
 <section class="header">
@@ -30,19 +31,19 @@
         <h2 th:text="${question.getQuestion}" class="title"></h2>
         <div class="container">
             <div>
-                <input th:name="${question}" type="radio" class="normalText">Passt sehr</input>
+                <input th:name="${question.ordinal()}" type="radio" class="normalText">Passt gar nicht</input>
             </div>
             <div>
-                <input th:name="${question}" type="radio" class="normalText">Passt eher schon</input>
+                <input th:name="${question.ordinal()}" type="radio" class="normalText">Passt eher nicht</input>
             </div>
             <div>
-                <input th:name="${question}" type="radio" class="normalText">keine Meinung</input>
+                <input th:name="${question.ordinal()}" type="radio" class="normalText">keine Meinung</input>
             </div>
             <div>
-                <input th:name="${question}" type="radio" class="normalText">Passt eher nicht</input>
+                <input th:name="${question.ordinal()}" type="radio" class="normalText">Passt eher schon</input>
             </div>
             <div>
-                <input th:name="${question}" type="radio" class="normalText">Passt gar nicht</input>
+                <input th:name="${question.ordinal()}" type="radio" class="normalText">Passt sehr</input>
             </div>
         </div>
         <div class="smallseparator"></div>
@@ -53,7 +54,79 @@
 
 <div class="container">
     <div>
-        <button class="button" role="button" onclick="window.location.href='result'">Get your results</button>
+        <button class="button" role="button" onclick="functions()">Get your results</button>
+        <script src="resources/javascript/chartData.js"></script>
+        <script>
+            let interpersonal = 0;
+            let logical = 0;
+            let linguistic = 0;
+            let musical = 0;
+            let intrapersonal = 0;
+            let visual = 0;
+            let naturalistic = 0;
+            let kinaesthetic = 0;
+
+            function functions(){
+                calculate();
+                window.open(window.location + "/result");
+            }
+
+            function calculate() {
+                for (let index = 0; index < 40; index++){
+                    const values = document.getElementsByName(index.toString())
+                    if (index < 5){
+                        for(i = 0; i < values.length; i++) {
+                            if(values[i].checked){
+                                kinaesthetic += parseInt(values[i].value)
+                            }
+                        }
+                    } else if (index > 4 && index < 10){
+                        for(i = 0; i < values.length; i++) {
+                            if(values[i].checked){
+                                linguistic+= parseInt(values[i].value)
+                            }
+                        }
+                    } else if (index > 9 && index < 15){
+                        for(i = 0; i < values.length; i++) {
+                            if(values[i].checked){
+                                naturalistic+= parseInt(values[i].value)
+                            }
+                        }
+                    } else if (index > 14 && index < 20){
+                        for(i = 0; i < values.length; i++) {
+                            if(values[i].checked){
+                                musical+= parseInt(values[i].value)
+                            }
+                        }
+                    } else if (index > 19 && index < 25){
+                        for(i = 0; i < values.length; i++) {
+                            if(values[i].checked){
+                                visual+= parseInt(values[i].value)
+                            }3
+                        }
+                    } else if (index > 24 && index < 30){
+                        for(i = 0; i < values.length; i++) {
+                            if(values[i].checked){
+                                intrapersonal+= parseInt(values[i].value)
+                            }
+                        }
+                    } else if (index > 29 && index < 35){
+                        for(i = 0; i < values.length; i++) {
+                            if(values[i].checked){
+                                interpersonal+= parseInt(values[i].value)
+                            }
+                        }
+                    } else if (index > 34 && index < 40){
+                        for(i = 0; i < values.length; i++) {
+                            if(values[i].checked){
+                                logical+= parseInt(values[i].value)
+                            }
+                        }
+                    }
+                }
+                user(kinaesthetic, linguistic, naturalistic, visual, musical, intrapersonal, interpersonal, logical)
+            }
+        </script>
     </div>
 </div>
 
