--- a/src/main/resources/templates/types.html
+++ b/src/main/resources/templates/types.html
@@ -29,7 +29,7 @@
 
 <div class="container">
     <div>
-        <p class="normalText">
+        <p class="text">
             Die Intelligenz Typen nach Harvard Professor Howard Gardner
         </p>
     </div>
