--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -31,7 +31,12 @@
 
         </div>
     </section>
-    <img class = "squidimg" src = "../resources/css/squid_logo.png">
-
+    <section>
+        <div class="container">
+            <div>
+                <img class = "squidimg" src = "../resources/css/squid_logo.png">
+            </div>
+        </div>
+    </section>
 </body>
 </html>
