--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -34,7 +34,7 @@
     <section>
         <div class="container">
             <div>
-                <img src = "../resources/css/squid_logo.png">
+                <img class = "squidimg" src = "../resources/css/squid_logo.png">
             </div>
         </div>
     </section>
