--- a/src/main/resources/static/resources/css/stylesheet.css
+++ b/src/main/resources/static/resources/css/stylesheet.css
@@ -152,9 +152,6 @@ input[type='radio']:checked:after {
     height: 35vh;
 }
 .squidimg{
-    width: 80vm;
-    height: 80vh;
-    position: fixed;
-    margin-left: 30%;
-
+    width: 50%;
+    height: 50%;
 }
